kubernetes/apps/home-automation/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  generation: 1
  labels:
    app: it-tools
  name: it-tools
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
      - image: sharevb/it-tools:latest
        imagePullPolicy: Always
        name: it-tools
        ports:
          - containerPort: 8080
      restartPolicy: Always
