kubernetes/apps/home-automation/it-tools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: home-automation
  labels:
    app: it-tools
spec:
  selector:
    app: it-tools
  type: ClusterIP
  ports:
    - protocol: TCP
      name: "webui"
      port: 8080
      targetPort: 8080
