kubernetes/apps/home-automation/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-internal
  namespace: home-automation
  labels:
    name: tools
spec:
  ingressClassName: internal
  rules:
  - host: tools.tnorbert.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: it-tools
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.tnorbert.com
  namespace: home-automation
  labels:
    name: tools
spec:
  ingressClassName: external
  rules:
  - host: tools.tnorbert.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: it-tools
            port:
              number: 80
